--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,50 @@
-/* developer styles goes here */
+body {
+    color: #00263e;
+    background: linear-gradient(rgb(255, 105, 180), rgb(255, 186, 0));
+    font-family: 'Nunito', sans-serif;
+}
+
+.container {
+    padding: 1rem;
+}
+
+h1 a {
+    color: #00263e;
+    text-decoration: none;
+}
+
+h1 {
+    letter-spacing: 5px;
+}
+
+h1::first-letter {
+    color: rgb(255, 105, 180);
+}
+
+h2 {
+    font-size: 3rem;
+    color: #fff;
+    text-align: center;
+}
+
+header {
+    background-color: #fff;
+}
+
+.menu-icons {
+    width: 40px;
+    text-align: center;
+}
+
+header .flex-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media only screen and (min-width: 1300px) {
+    .container {
+        padding: 1rem 0;
+        max-width: 75rem;
+        margin: 0 auto;
+    }
+}
